force-app/main/default/objects/Gatekeeper__mdt/fields/Profiles__c.field-meta.xml
<CustomField>
    <fullName>Profiles__c</fullName>
    <label>Profiles</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>