force-app/main/default/objects/Gatekeeper__mdt/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>