force-app/main/default/objects/Gatekeeper__mdt/fields/Usernames__c.field-meta.xml
<CustomField>
    <fullName>Usernames__c</fullName>
    <label>Usernames</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>